[gd_scene load_steps=3 format=2]

[ext_resource path="res://Overlays-Menus/Pause.gd" type="Script" id=1]
[ext_resource path="res://Overlays-Menus/menu_theme.tres" type="Theme" id=2]

[node name="PauseOverlay" type="CanvasLayer"]

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.572549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -52.0
margin_right = 67.0
margin_bottom = -20.0
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -58.0
margin_right = 54.0
margin_bottom = -35.0
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -26.0
margin_right = 62.0
margin_bottom = -3.0
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 6.00001
margin_right = 51.0
margin_bottom = 29.0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/restart" to="Pause" method="_on_restart_pressed"]
[connection signal="pressed" from="Pause/continue" to="Pause" method="_on_continue_pressed"]
[connection signal="pressed" from="Pause/quit" to="Pause" method="_on_quit_pressed"]
